@@ -473,6 +473,7 @@ A finite field is encoded by any element (\typ{FFELT}).\hfil\break
 \li{valuation of $x$ at $p$}{valuation$(x,p)$}
 \subsec{Dirichlet and Power Series}
 \li{Taylor expansion around $0$ of $f$ w.r.t. $x$}{taylor$(f,x)$}
+\li{Laurent series expansion around $0$ up to $x^k$}{laurentseries$(f,k)$}
 \li{$\sum a_kb_k t^k$ from $\sum a_kt^k$ and $\sum b_kt^k$}{serconvol$(a,b)$}
 \li{$f=\sum a_k t^k$ from $\sum (a_k/k!)t^k$}{serlaplace$(f)$}
 \li{reverse power series $F$ so $F(f(x))=x$}{serreverse$(f)$}
