@@ -104,6 +104,11 @@ Mod(1, 3)
 1 + O(3)*x + O(x^2)
 1 + z^2 + O(z^3)
 y^2 + (1 + z^2 + O(z^3))
+x^-1 - 1/6*x + 1/120*x^3 + O(x^4)
+t^-1 - 1/6*t + 1/120*t^3 + O(t^4)
+-1/2*x + 1/24*x^3 - 1/720*x^5 + 1/40320*x^7 - 1/3628800*x^9 + 1/479001600*x^
+11 - 1/87178291200*x^13 + 1/20922789888000*x^15 - 1/6402373705728000*x^17 + 
+O(x^18)
   ***   at top-level: subst(x^-1+O(x),x,Mod(0,3))
   ***                 ^---------------------------
   *** subst: impossible inverse in gsubst: Mod(0, 3).
@@ -116,4 +121,4 @@ y^2 + (1 + z^2 + O(z^3))
   ***   at top-level: subst(O(x^-1),x,0*x)
   ***                 ^--------------------
   *** subst: impossible inverse in gsubst: 0.
-Total time spent: 9
+Total time spent: 13
