@@ -329,6 +329,7 @@ BA  132- [libpari] FpXn_mul, FpXn_sqr, RgXn_recip_shallow, FpXn_exp,
          FpX_Newton, FpX_fromNewton, FpX_Laplace, FpX_invLaplace
 BA  133- [libpari] FpX_integ, FpX_convol
     134- allow zeta(power series)
+    135- New GP function laurentseries
 
   Changed
       1- rewrite bnfnarrow
